<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DDE3E3"
    android:orientation="vertical">


    <include
        android:id="@+id/appbar"
        layout="@layout/appbar_acts" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/verify_ln"></include>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:elevation="2dp"
            app:cardBackgroundColor="#fff"
            app:cardCornerRadius="3dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/mainln"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="7dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">


                    <ImageView
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:src="@mipmap/ic_launcher" />


                    <LinearLayout
                        android:id="@+id/lnprofile"
						android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/mobile"
                            style="@style/edittexts"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableRight="@drawable/phone"
                            android:hint="@string/hint_mobile"
                            android:inputType="number"
                            android:nextFocusDown="@+id/user" />

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/input_layout_mobile"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"></android.support.design.widget.TextInputLayout>

                        <EditText
                            android:id="@+id/user"
                            style="@style/edittexts"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="7dp"
                            android:drawableRight="@drawable/ic_user_gray"
                            android:hint="@string/namefamil"
                            android:inputType="text" />

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/input_layout_user"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="7dp">

                        </android.support.design.widget.TextInputLayout>

                        <EditText
                            android:id="@+id/email"
                            style="@style/edittexts"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="7dp"
                            android:drawableRight="@drawable/ic_email_grey600_18dp"
                            android:hint="@string/hint_email"
                            android:inputType="textEmailAddress"
                            android:nextFocusDown="@+id/tel" />

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/input_layout_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">


                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/input_layout_moaref"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:visibility="gone">

                            <EditText
                                android:id="@+id/moaref"
                                style="@style/edittexts"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawableRight="@drawable/phone"
                                android:hint="@string/hint_moaref"
                                android:inputType="number"
                                android:nextFocusDown="@+id/tel" />

                        </android.support.design.widget.TextInputLayout>


                        <EditText
                            android:id="@+id/tel"
                            style="@style/edittexts"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="7dp"
                            android:drawableRight="@drawable/ic_phone"
                            android:hint="@string/tel"
                            android:inputType="number"
                            android:nextFocusDown="@+id/address" />

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/input_layout_tel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp">


                        </android.support.design.widget.TextInputLayout>

                        <EditText
                            android:id="@+id/adress"
                            style="@style/edittexts"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="7dp"
                            android:drawableRight="@drawable/ic_location"
                            android:hint="@string/adress"
                            android:inputType="text"
							           android:visibility="gone"
                            android:nextFocusDown="@+id/codeposti" />

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/input_layout_adress"
                            android:layout_width="match_parent"
							           android:visibility="gone"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="7dp">


                        </android.support.design.widget.TextInputLayout>

                        <EditText
                            android:id="@+id/codeposti"
                            style="@style/edittexts"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableRight="@drawable/ic_postcard"
                            android:hint="@string/codeposti"
							           android:visibility="gone"
                            android:inputType="number" />

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/input_layout_codeposti"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
							           android:visibility="gone"
                            android:layout_marginTop="7dp"></android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:id="@+id/lnpass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="37dp"
                            android:layout_marginTop="0dp"
                            android:layoutDirection="rtl"
                            app:hintEnabled="false"
                            app:passwordToggleEnabled="true">

                            <EditText
                                android:id="@+id/old_password"
                                style="@style/edittexts"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawableLeft="@drawable/ic_https_grey600_18dp"
                                android:drawableStart="@drawable/ic_https_grey600_18dp"
                                android:gravity="right|center_vertical"
                                android:hint="رمز عبور فعلی"
                                android:inputType="textPassword"
                                android:nextFocusDown="@+id/repassword" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/input_layout_oldpass"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"></android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="37dp"
                            android:layout_marginTop="7dp"
                            android:layoutDirection="rtl"
                            app:hintEnabled="false"
                            app:passwordToggleEnabled="true">

                            <EditText
                                android:id="@+id/password"
                                style="@style/edittexts"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawableLeft="@drawable/ic_https_grey600_18dp"
                                android:drawableStart="@drawable/ic_https_grey600_18dp"
                                android:gravity="right|center_vertical"
                                android:hint="@string/hint_pass"
                                android:inputType="textPassword"
                                android:nextFocusDown="@+id/repassword" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/input_layout_pass"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"></android.support.design.widget.TextInputLayout>


                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="37dp"
                            android:layout_marginTop="7dp"
                            android:layoutDirection="rtl"
                            app:hintEnabled="false"
                            app:passwordToggleEnabled="true">

                            <EditText
                                android:id="@+id/repass"
                                style="@style/edittexts"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawableLeft="@drawable/ic_https_grey600_18dp"
                                android:drawableStart="@drawable/ic_https_grey600_18dp"
                                android:gravity="right|center_vertical"
                                android:hint="@string/hint_repass"
                                android:inputType="textPassword"
                                android:nextFocusDown="@+id/email" />

                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/input_layout_repass"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"></android.support.design.widget.TextInputLayout>


                    </LinearLayout>


                    <TextView
                        android:id="@+id/register"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="7dp"
                        android:background="#3A5475"
                        android:gravity="center"
                        android:text="@string/register"
                        android:textColor="#fff"
                        android:textSize="17sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </ScrollView>

        </android.support.v7.widget.CardView>
    </LinearLayout>

</LinearLayout>